--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "build": "webpack --config webpack/prod.config.js",
-    "dev": "webpack-dev-server --config webpack/dev.config.js",
+    "dev": "webpack-dev-server --config webpack/dev.config.js --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
