--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "author": "David Sttivend A",
   "license": "MIT",
-  "files": [
-    "dist/main.js",
-    "index.js"
-  ],
+  "files": ["dist/main.js", "index.js"],
   "repository": {
     "type": "git",
     "url": "https://github.com/davidsa/drag-scroll-provider.git"
@@ -17,11 +14,7 @@
   "bugs": {
     "url": "https://github.com/davidsa/drag-scroll-provider/issues"
   },
-  "keywords": [
-    "react",
-    "drag",
-    "scroll"
-  ],
+  "keywords": ["react", "drag", "scroll"],
   "scripts": {
     "build": "webpack --config webpack/prod.config.js",
     "dev": "webpack-dev-server --config webpack/dev.config.js --host 0.0.0.0",
