--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "es5"
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "jsxBracketSameLine": true
 }
