--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
 language: node_js
+after_success:
+  - npm run travis-deploy-once "npm run semantic-release"
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
