--- a/package.json
+++ b/package.json
@@ -22,7 +22,15 @@
         "test":
             "mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
         "test:watch":
-            "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js"
+            "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
+        "semantic-release": "semantic-release",
+        "travis-deploy-once": "travis-deploy-once",
+        "commit": "git-cz"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     },
     "dependencies": {
         "react": "^16.5.2"
@@ -36,7 +44,9 @@
         "@babel/register": "^7.0.0",
         "babel-loader": "^8.0.4",
         "chai": "^4.2.0",
+        "commitizen": "^3.0.5",
         "css-loader": "^1.0.0",
+        "cz-conventional-changelog": "^2.1.0",
         "enzyme": "^3.7.0",
         "enzyme-adapter-react-16": "^1.7.0",
         "html-webpack-plugin": "^3.2.0",
@@ -46,8 +56,10 @@
         "precise-commits": "^1.0.2",
         "prettier": "^1.14.3",
         "react-dom": "^16.5.2",
+        "semantic-release": "^15.12.4",
         "sinon": "^7.1.1",
         "style-loader": "^0.23.0",
+        "travis-deploy-once": "^5.0.9",
         "webpack": "^4.20.2",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.9"
