--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
+install:
+  - yarn install
+  - npm install -g codecov
+script:
+  - yarn test
+  - codecov
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
 branches:
