chore: Update scripts for code coverage

--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
         "dev":
             "webpack-dev-server --config webpack/dev.config.js --host 0.0.0.0",
         "test":
-            "nyc --reporter=text --reporter=html mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
+            "nyc --reporter=html --reporter=text mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
         "test:watch":
             "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
-        "coverage":
-            "nyc --reporter=html mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
+        "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
         "semantic-release": "semantic-release",
         "travis-deploy-once": "travis-deploy-once",
         "commit": "git-cz"
