--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
         "dev":
             "webpack-dev-server --config webpack/dev.config.js --host 0.0.0.0",
         "test":
-            "nyc --reporter=html --reporter=text mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
+            "nyc --reporter=lcov --reporter=text mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
         "test:watch":
             "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
-        "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
+        "coverage":
+            "nyc report --reporter=text-lcov > coverage.lcov && codecov",
         "semantic-release": "semantic-release",
         "travis-deploy-once": "travis-deploy-once",
         "commit": "git-cz"
