--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
             "nyc --reporter=lcov --reporter=text mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
         "test:watch":
             "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
-        "coverage":
-            "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+        "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
         "semantic-release": "semantic-release",
         "travis-deploy-once": "travis-deploy-once",
         "commit": "git-cz"
