--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "cz-conventional-changelog": "^2.1.0",
         "enzyme": "^3.7.0",
         "enzyme-adapter-react-16": "^1.7.0",
+        "greenkeeper-lockfile": "^1.15.1",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.1.0",
         "jsdom": "^13.0.0",
