--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "author": "David Sttivend A",
     "license": "MIT",
-    "files": ["dist/main.js", "index.js"],
+    "files": [
+        "dist/main.js",
+        "index.js"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/davidsa/drag-scroll-provider.git"
@@ -14,15 +17,16 @@
     "bugs": {
         "url": "https://github.com/davidsa/drag-scroll-provider/issues"
     },
-    "keywords": ["react", "drag", "scroll"],
+    "keywords": [
+        "react",
+        "drag",
+        "scroll"
+    ],
     "scripts": {
         "build": "webpack --config webpack/prod.config.js",
-        "dev":
-            "webpack-dev-server --config webpack/dev.config.js --host 0.0.0.0",
-        "test":
-            "nyc --reporter=lcov --reporter=text mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
-        "test:watch":
-            "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
+        "dev": "webpack-dev-server --config webpack/dev.config.js --host 0.0.0.0",
+        "test": "nyc --reporter=lcov --reporter=text mocha --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
+        "test:watch": "mocha --watch --require @babel/register --require ./test/setupTests.js ./test/**/*.spec.js",
         "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
         "semantic-release": "semantic-release",
         "travis-deploy-once": "travis-deploy-once",
@@ -54,8 +58,8 @@
         "html-webpack-plugin": "^3.2.0",
         "husky": "^3.0.1",
         "jsdom": "^15.1.1",
-        "nyc": "^14.1.1",
         "mocha": "^6.0.0",
+        "nyc": "^14.1.1",
         "precise-commits": "^1.0.2",
         "prettier": "^1.14.3",
         "react-dom": "^16.5.2",
