--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,12 @@ cache:
   directories:
     - ~/.npm
     - node_modules
-install:
-  - yarn install
-  - npm install -g codecov
-script:
-  - yarn test
-  - codecov
-after_success:
-  - npm run travis-deploy-once "npm run semantic-release"
-branches:
-  except:
-    - /^v\d+\.\d+\.\d+$/
+jobs:
+  include:
+    - stage: release
+      node_js: lts/*
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+          - npx semantic-release
